# game_of_life

game_of_life/: pyproject.toml
game_of_life/game_of_life/: cells.py  display.py  main.py  my_input_file.txt  my_output_file.text  my_output_file.txt
game_of_life/tests/: .coverage  blinker.txt  blinker_vertical.txt  cells.py  display.py  main.py  test_cells.py  test_output.py
