[tool.poetry]
name = "game-of-life"
version = "0.1.0"
description = ""
authors = ["Guillaume Coulomb <guillaume.coulomb@etu.minesparis.psl.eu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
game_of_life = "game_of_life.main:game_of_life"
